--- a/logging.conf
+++ b/logging.conf
@@ -1,5 +1,5 @@
 [loggers]
-keys=root,MC,P2PMQTT
+keys=root,MC,P2PMQTT,DBManager
 
 [handlers]
 keys=consoleHandler,fileHandler
@@ -23,6 +23,12 @@ qualname=p2p_mqtt
 propagate=0
 handlers=consoleHandler
 
+[logger_DBManager]
+level=DEBUG
+qualname=DBManager
+propagate=0
+handlers=fileHandler,consoleHandler
+
 [handler_consoleHandler]
 class=StreamHandler
 level=DEBUG
@@ -36,5 +42,5 @@ formatter=fmt
 args=('logs/mcs.log', 'a', 1000000,5,)
 
 [formatter_fmt]
-format=%(asctime)s - %(name)s - %(levelname)s - %(message)s
+format=%(asctime)s - %(name)s - %(funcName)s - %(lineno)d %(levelname)s - %(message)s
 datefmt=
