--- a/logging.conf
+++ b/logging.conf
@@ -25,7 +25,7 @@ handlers=consoleHandler
 
 [logger_DBManager]
 level=DEBUG
-qualname=DBManager
+qualname=db_manager
 propagate=0
 handlers=fileHandler,consoleHandler
 
@@ -42,5 +42,5 @@ formatter=fmt
 args=('logs/mcs.log', 'a', 1000000,5,)
 
 [formatter_fmt]
-format=%(asctime)s - %(name)s - %(funcName)s - %(lineno)d - %(levelname)s - %(message)s
+format=%(asctime)s - %(name)s - %(funcName)s [line: %(lineno)d] %(levelname)s - %(message)s
 datefmt=
