db module:   1. db_manager log

--- a/logging.conf
+++ b/logging.conf
@@ -42,5 +42,5 @@ formatter=fmt
 args=('logs/mcs.log', 'a', 1000000,5,)
 
 [formatter_fmt]
-format=%(asctime)s - %(name)s - %(funcName)s [line: %(lineno)d] %(levelname)s - %(message)s
+format=%(asctime)s %(name)s %(levelname)s [func: %(funcName)s line: %(lineno)d]: %(message)s
 datefmt=
