db module:   1. check ecs stream info

--- a/logging.conf
+++ b/logging.conf
@@ -1,5 +1,5 @@
 [loggers]
-keys=root,MC,P2PMQTT,DBManager
+keys=root,MC,P2PMQTT,DBManager,StreamInfo
 
 [handlers]
 keys=consoleHandler,fileHandler
@@ -26,6 +26,12 @@ handlers=consoleHandler
 [logger_DBManager]
 level=DEBUG
 qualname=db_manager
+propagate=0
+handlers=fileHandler,consoleHandler
+
+[logger_StreamInfo]
+level=DEBUG
+qualname=stream_info
 propagate=0
 handlers=fileHandler,consoleHandler
 
