db module:   1. ali stream_server request and config

--- a/logging.conf
+++ b/logging.conf
@@ -1,5 +1,5 @@
 [loggers]
-keys=root,MC,P2PMQTT,DBManager,StreamInfo
+keys=root,MC,P2PMQTT,DBManager,StreamServer
 
 [handlers]
 keys=consoleHandler,fileHandler
@@ -29,9 +29,9 @@ qualname=db_manager
 propagate=0
 handlers=fileHandler,consoleHandler
 
-[logger_StreamInfo]
+[logger_StreamServer]
 level=DEBUG
-qualname=stream_info
+qualname=stream_server
 propagate=0
 handlers=fileHandler,consoleHandler
 
