--- a/requirements/requirements.txt
+++ b/requirements/requirements.txt
@@ -1,7 +1,13 @@
+aiohttp==3.1.3
+async-timeout==2.0.1
+attrs==17.4.0
 Babel==2.5.3
 blinker==1.4
+certifi==2018.4.16
+chardet==3.0.4
 click==6.7
 dominate==2.3.1
+eventlet==0.22.1
 Flask==0.12.2
 Flask-BabelEx==0.9.3
 Flask-Bootstrap==3.3.7.1
@@ -12,18 +18,29 @@ flask-mongoengine==0.9.3
 Flask-MQTT==0.0.11
 Flask-Principal==0.4.0
 Flask-Security==3.0.0
+Flask-SocketIO==2.9.6
 Flask-WTF==0.14.2
+greenlet==0.4.13
+idna==2.6
+idna-ssl==1.0.1
 itsdangerous==0.24
 Jinja2==2.10
 MarkupSafe==1.0
 mongoengine==0.15.0
+multidict==4.2.0
 paho-mqtt==1.3.1
 passlib==1.7.1
 pymongo==3.6.0
+python-engineio==2.0.4
+python-socketio==1.9.0
 pytz==2017.3
+requests==2.18.4
 six==1.11.0
 speaklater==1.3
 typing==3.6.4
+urllib3==1.22
 visitor==0.1.3
+websockets==4.0.1
 Werkzeug==0.14.1
 WTForms==2.1
+yarl==1.1.1
