--- a/requirements/requirements.txt
+++ b/requirements/requirements.txt
@@ -1,11 +1,14 @@
 aiohttp==3.1.3
+asn1crypto==0.24.0
 async-timeout==2.0.1
 attrs==17.4.0
 Babel==2.5.3
 blinker==1.4
 certifi==2018.4.16
+cffi==1.11.5
 chardet==3.0.4
 click==6.7
+cryptography==2.2.2
 dominate==2.3.1
 eventlet==0.22.1
 Flask==0.12.2
@@ -30,15 +33,21 @@ mongoengine==0.15.0
 multidict==4.2.0
 paho-mqtt==1.3.1
 passlib==1.7.1
+pyasn1==0.4.3
+pycparser==2.18
+pycrypto==2.6.1
 pymongo==3.6.0
+pyOpenSSL==18.0.0
 python-engineio==2.0.4
 python-socketio==1.9.0
 pytz==2017.3
 requests==2.18.4
+rsa==3.4.2
 six==1.11.0
 speaklater==1.3
 typing==3.6.4
 urllib3==1.22
+uWSGI==2.0.17
 visitor==0.1.3
 websockets==4.0.1
 Werkzeug==0.14.1
